--- a/themes/hugo-stack/assets/scss/variables.scss
+++ b/themes/hugo-stack/assets/scss/variables.scss
@@ -86,6 +86,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
         --card-text-color-secondary: rgba(255, 255, 255, 0.7);
         --card-text-color-tertiary: rgba(255, 255, 255, 0.5);
         --card-separator-color: rgba(255, 255, 255, 0.12);
+        --card-header-underline: #EDC84C;
     }
 }
 
@@ -109,6 +110,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 :root {
     --blockquote-border-size: 5px;
     --blockquote-background-color: rgb(248 248 248);
+    --blockquote-border-color: #EDC84C;
 
     --heading-border-size: 4px;
 
